--- a/grouppaper.tex
+++ b/grouppaper.tex
@@ -47,7 +47,7 @@
 \normalfont \normalsize 
 \textsc{project for CS388P: Parallel Algorithms (Fall 2016)} 
 \horrule{0.5pt} \\[0.4cm] % Thin top horizontal rule
-\huge Prioritizing processor efficiency over time efficiency \\ % Write your project title here
+\huge Prioritizing Processor Efficiency Over Time Efficiency \\ % Write your project title here
 \horrule{2pt} \\[0.5cm] % Thick bottom horizontal rule
 }
 
@@ -77,8 +77,7 @@ Our paper is \textit{Time-Work Tradeoffs for Parallel Algorithms}, \textit{Spenc
 \item Single Source Shortest Path
 \end{itemize}
 
-Rather than using a matrix based approach, Spencer utilizes a few new data structures called \textit{nearby lists}, \textit{frontier lists}, \textit{inverse nearby lists}, and \textit{inverse frontier lists} that provide the necessary bookkeeping for the subsequent algorithms. \\
-
+Rather than using a matrix based approach, Spencer utilizes a new data structure called \textit{nearby lists} that serves as the work horse for the subsequent algorithms. \\
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -87,7 +86,7 @@ Rather than using a matrix based approach, Spencer utilizes a few new data struc
 
 \section{Introduction}
 
-\textit{Spencer\cite{S97}} focuses on the problems for which there is no known efficient parallel algorithm that solves them. That is, there is no known parallel algorithm that is able to solve them in work that is within a logarithmic factor of the fastest sequential algorithm, where work is the product of the running time and the processor count. \textit{Spencer\cite{S97}} develops parallel algorithms that solves the following problems presented in Karp-Ramachandran\cite{KR90}:
+\textit{Spencer\cite{S97}} focuses on the problems for which there is no known efficient parallel algorithm that solves them. That is, there is no known parallel algorithm that is able to solve them in work that is within a logarithmic factor of the fastest sequential algorithm, where work is the product of the running time and the processor count. \textit{Spencer\cite{S97}} develops parallel algorithms that solves the following problems presented in \textit{Karp-Ramachandran\cite{KR90}}:
 
 \begin{itemize}
 \item Directed Spanning Tree
@@ -102,9 +101,12 @@ His algorithms exhibit a time-work trade-off, that is, the longer they run, the 
 
 \textbf{\textit{/* Note: We may or may not need these definitions here. */}}\\
 We next reproduce three definitions given in \textit{Spencer\cite{S97}}:\\
-\indent\emph{Definition.} A vertex $v$ \textit{reaches} a vertex $u$ iff there is a path from $v$ to $u$. Conversely, $u$ is \textit{reachable} from $v$ iff there is path from $v$ to $u$.\\
-\indent\emph{Definition.} Let $G = (V, E)$ be a graph and let $R \subseteq V$. $G[R] = (R, E')$, where $E' \subseteq R \times R$.\\
-\indent\emph{Definition.} Two vertices $u,v$ are \textit{identified} by replacing them with a single vertex $uv$. The outgoing edges of both $u$ and $v$ becomes the outgoing edges of $uv$ and the incoming edges of both $u$ and $v$ become the incoming edges of $uv$.
+
+\textit{Definition.} A vertex $v$ \textit{reaches} a vertex $u$ iff there is a path from $v$ to $u$. Conversely, $u$ is \textit{reachable} from $v$ iff there is path from $v$ to $u$.\\
+
+\textit{Definition.} Let $G = (V, E)$ be a graph and let $R \subseteq V$. $G[R] = (R, E')$, where $E' \subseteq R \times R$.\\
+
+\textit{Definition.} Two vertices $u,v$ are \textit{identified} by replacing them with a single vertex $uv$. The outgoing edges of both $u$ and $v$ becomes the outgoing edges of $uv$ and the incoming edges of both $u$ and $v$ become the incoming edges of $uv$.
 
 %----------------------------------------------------------------------------------------
 %	RESULTS
@@ -112,11 +114,26 @@ We next reproduce three definitions given in \textit{Spencer\cite{S97}}:\\
 
 \section{Results and Techniques of Assigned paper}
 
-Highlight the major contributions and results of the assigned paper.
+Let $G = (V,E)$, $m = |E|$, and $n = |V|$. The major contributions of \textit{Spencer\cite{S97}} are as follows:
+
+\begin{itemize}
+\item Algorithms that solves topological sort and breadth first search in $O(\frac{n}{\rho}\log^2{\rho})$ time with $\rho^3$ processors on an EREW PRAM such that $ \sqrt{\frac{m}{n}} \leq \rho \leq n$.
+\item A randomized algorithm that solves strongly connected components in a directed graph in $O(\frac{n}{\rho}\log^2{\rho}\log{n})$ expected time and $O(n\rho^2\log^2{p}\log{n})$ expected work such that $ \sqrt{\frac{m}{n}} \leq \rho \leq n$.
+\item An algorithm that solves single source shortest paths in $O(\frac{n}{\rho}\log{n}\log{(L\rho)})$ time and $O(n\rho^2(\log{n} + \log{(L\rho)}\log{\rho}) + m(\log{n} + \log{(L\rho)}))$ work such that $\log{(L\rho)} <= \rho <= n$, where $L$ is the length of the longest edge.
+\end{itemize}
 
 \subsection{Techniques}
-Give an overview of the major techniques that were used in the paper to achieve these results. 
+\hfill
 
+\textit{Definition.} The \textit{nearby list}, $NL(v)$, of a vertex $v$ consists of ordered pairs $(u, d(v,u))$ where $u$ is a vertex reachable from $v$ and $d(v,u)$ is the distance from $v$ to $u$.\\
+
+\textit{Definition.} A vertex $v$ is \textit{terminal} if $r(v)$, the nearby radius of $v$, is infinite and $NL(v)$ contains all reachable vertices from $v$. A vertex $v$ is \textit{totally terminal} if $v$ is terminal and all vertices in $NL(v)$ is terminal.\\
+
+In solving topological sort, \textit{Spencer\cite{S97}} actually solves the reverse topological sort which can be easily converted to a topological sort by replacing $w(v)$ with $n + 1 - w(v)$, where $w(v)$ is the label given by the reverse topological sort. \textit{Karp-Ramachandran\cite{KR90}} presented an algorithm that can compute this topological sort in $O(\log^2{n})$ time and $O(n^3\log{n})$ work by computing the transitive closure, $G^*$, of $G$. \textit{Spencer\cite{S97}} introduces an algorithm, \textit{Rtopo}, that performs less work by computing parts of $G^*$ instead of the whole thing. This is achieved by the nearby list data structure, whose size is controlled by the parameter $\rho$. The smallest $w(v)$ is assigned to the totally terminal vertices, and the nearby lists are updated to expose newly formed totally terminal vertices. The details of which we omit here.\\   
+
+\textit{Definition.} A vertex $v$ is \textit{known} iff the distance from $s$ to $v$ is at most $R_k$, the known radius.\\
+
+In solving breadth first search, \textit{Spencer\cite{S97}} employs a very similar algorithm to \textit{Rotpo} called \textit{pbfs}. Again, there exists a parallel algorithm that can solve breadth first search in $O(\log^2{n})$ time and $O(n^3\log{n})$ work by calculating the transitive closure $G^*$. \textit{pbfs} reduced the work by deleting vertices from $G_u$, the unknown graph consisting of unknown vertices, once it has been known. All the techniques developed for \textit{Rtopo} are applicable to \textit{bpfs}. 
 
 %----------------------------------------------------------------------------------------
 %	LITERATURE SURVEY
