--- a/grouppaper.tex
+++ b/grouppaper.tex
@@ -145,7 +145,7 @@ The three most centrally related papers to Spencer we chose are: Karp-Ramachandr
 
 Karp-Ramachandran is a survey of the accumlated theory of parallel algorithms up to the 1990s. This survey focused on the PRAM as its main computational model and starts off with an overview of efficient parallel algorithms on arrays, algebraic expressions, graphs, sorting, etc... After estabishing the fundamentals, the survey explores the different vairants PRAM models handle concurrent reads and write, in addition provided a brief introduction to other parallel models different from the PRAM. Finally, the survey discussed the class of problem known as NC, problems that have parallel solutions in polylog time and perform polynomial work.  It is actually here in which Spencer makes use of Karp-Ramachandran, where the survey listed the aformentioned six graph problems that have no known efficient solution due to the Transitive Closure Bottleneck. We believe that without Karp-Ramachandran, there would be no Spencer, since his entire paper is stemmed from this part of the survey. There is also the fact that Spencer's Rtopo's algorithm depends on an efficient simulation of CREW on EREW to maintain the necessary data structures for its nearby lists.
 
-Ullman-Yannakakis introduces a high-probablilty parallel algorithm that finds the transitive closure from a single source in ~O(n^e') time with ~O(mn^(1-2e')) processors such that e >= n^(2-3e'). Their algorithm also finds the transitive closure for all pairs in ~O(n^e') time with ~O(mn^(1-e')) processors such that m >= n^(2-2e'). They require 0 <= e' <= 1/2. The probability that their algorithm fails to find a path is at most 2^(-ac), where a is a positive constant and c is some time multiplier. Their algorithm is the first in which time is sublinear and work is less than M(n). Our main interest in Ullman-Yannakakis is the fact that they have already established an algorithm exhibiting the time-work tradeoff that solves breadth first search. Their algorithm is high-probability, and we were interested in seeing a different approach to the same problem we are facing in Spencer. In addition, their was extended into the context of single source shortest paths and strongly connected components, highlighting the fact that the true novelty in Spencer is it's introduction of nearby lists.
+Ullman-Yannakakis introduces a high-probablilty parallel algorithm that finds the transitive closure from a single source in $~O(n^(e'))$ time with $~O(mn^(1-2e'))$ processors such that $e >= n^(2-3e')$. Their algorithm also finds the transitive closure for all pairs in $~O(n^(e'))$ time with $~O(mn^(1-e'))$ processors such that $m >= n^(2-2e')$. They require $0 <= e' <= 1/2$. The probability that their algorithm fails to find a path is at most $2^(-ac)$, where a is a positive constant and c is some time multiplier. Their algorithm is the first in which time is sublinear and work is less than $M(n)$. Our main interest in Ullman-Yannakakis is the fact that they have already established an algorithm exhibiting the time-work tradeoff that solves breadth first search. Their algorithm is high-probability, and we were interested in seeing a different approach to the same problem we are facing in Spencer. In addition, their was extended into the context of single source shortest paths and strongly connected components, highlighting the fact that the true novelty in Spencer is it's introduction of nearby lists.
 
 Paul introduces parallel techniques than search, insert, and delete from 2-3 treens in O(logn + logk) time on the EREW, where n is the number of leaves and k is the number of searches, inserts or deletes we want to perform in parallel. He seemed to be the first to design a fast tree algorithm. This results presented by Paul were used by Spencer at several key areas in his algorithms. In particular, Rtopo needed a variation of the search algorithm to find all the totally terminal vertices to be deleted and SSSP required a parallel extention of 2-3 trees to search, insert, and delete many items in parallel. We decided to unpeel some of the details presented in Paul that Spencer decided to abtract away from his paper so that we may have a better understanding of his algorithms.
 
