--- a/grouppaper.tex
+++ b/grouppaper.tex
@@ -66,7 +66,7 @@
 \textbf{Abstract}
 
 \begin{abstract}
-Our paper is \textit{Time-Work Tradeoffs for Parallel Algorithms}, \textit{Spencer\cite{S97}}. In this paper, Spencer focuses on several open parallel problems that are affected by the transitive closure bottleneck. For each of the below problems, Spencer describes an algorithm that comes closer to work efficiency than existing approaches that utilize transitive closure. However, this increased work efficiency comes at the cost of an asymptotic increase in the span of each algorithm relative to the time optimal solution. Spencer's motivation for prioritizing work efficiency over time efficiency stems from the fact that existing transitive closure solutions to these problems perform significantly worse than their sequential counterparts when run on only a single processor.
+Our paper is \textit{Time-Work Tradeoffs for Parallel Algorithms}, \textit{Spencer\cite{S97}}. In this paper, Spencer focuses on several open parallel problems that are affected by the transitive closure bottleneck. For each of the below problems, Spencer describes an algorithm that comes closer to work efficiency than existing approaches that utilize transitive closure. However, this increased work efficiency comes at the cost of an asymptotic increase in the span of each algorithm relative to the time optimal solution. 
 
 \underline{Problems}
 \begin{itemize}
@@ -86,7 +86,7 @@ Rather than using a matrix based approach, Spencer utilizes a new data structure
 
 \section{Introduction}
 
-\textit{Spencer\cite{S97}} focuses on the problems for which there is no known efficient parallel algorithm that solves them. That is, there is no known parallel algorithm that is able to solve them in work that is within a logarithmic factor of the fastest sequential algorithm, where work is the product of the running time and the processor count. \textit{Spencer\cite{S97}} develops parallel algorithms that solves the following problems presented in \textit{Karp-Ramachandran\cite{KR90}}:
+\textit{Spencer\cite{S97}} focuses on problems for which we known of no work-time efficient parallel algorithms that provide a solution. That is, there are no known parallel algorithms that are able to solve any of the following probelems within a logarithmic factor of the fastest sequential algorithm's work, where work is the product of the running time and the processor count. For the following problems, which were presented in \textit{Karp-Ramachandran\cite{KR90}}, \textit{Spencer\cite{S97}} develops parallel algorithms with a better work efficiency than transitive closure based methods:
 
 \begin{itemize}
 \item Directed Spanning Tree
@@ -97,7 +97,7 @@ Rather than using a matrix based approach, Spencer utilizes a new data structure
 \item Single Source Shortest Paths with Non-Negative Edges
 \end{itemize}
 
-His algorithms exhibit a time-work trade-off, that is, the longer they run, the less work they perform. This phenomenon exists due of the fact that certain speculative computations can be eliminated as time progresses, thus reducing work. One algorithm solves topological sort and the other algorithm solves breadth first search. It was mentioned in passing that the breadth first search algorithm can solve directed spanning trees and the topological sort algorithm can solve cycle detection for directed graphs. Furthermore, the breadth first search algorithm can be applied to strongly connected components and extended to single source shortest paths with non-negative edges.\\
+Spencer's motivation for prioritizing work efficiency over time efficiency stems from the fact that existing parallel transitive closure algorithms for these problems perform significantly worse than their sequential counterparts when run on only a single processor. In an effort to reduce this problem, Spencer's algorithms exhibit a time-work trade-off, that is, the longer they are allowed to run, the less overall work they perform. This phenomenon exists due of the fact that certain speculative computations can be eliminated as time progresses, thus reducing overall work. The first full algorithm which Spencer presents solves topological sort, while the second algorithm solves breadth first search. It was mentioned in passing that the breadth first search algorithm can solve directed spanning trees and the topological sort algorithm can solve cycle detection for directed graphs. Furthermore, Spencer expands upon the breadth first search algorithm  by utilizing it to find strongly connected components and extending his breadth first search methods to support non-negative edge weights so as to solve the single source shortest paths problem.\\
 
 \textbf{\textit{/* Note: We may or may not need these definitions here. */}}\\
 We next reproduce three definitions given in \textit{Spencer\cite{S97}}:\\
@@ -134,6 +134,11 @@ In solving topological sort, \textit{Spencer\cite{S97}} actually solves the reve
 \textit{Definition.} A vertex $v$ is \textit{known} iff the distance from $s$ to $v$ is at most $R_k$, the known radius.\\
 
 In solving breadth first search, \textit{Spencer\cite{S97}} employs a very similar algorithm to \textit{Rotpo} called \textit{pbfs}. Again, there exists a parallel algorithm that can solve breadth first search in $O(\log^2{n})$ time and $O(n^3\log{n})$ work by calculating the transitive closure $G^*$. \textit{pbfs} reduced the work by deleting vertices from $G_u$, the unknown graph consisting of unknown vertices, once it has been known. All the techniques developed for \textit{Rtopo} are applicable to \textit{bpfs}. 
+
+In solving strongly connected components, Spencer again utilizes pbfs. The algorithm utilizes divide and conquer in order to separate subsets of strongly connected components and subgraphs of nodes which have not yet been placed in a strongly connected component. He first applies a procedure called "split" which utilizes uniform randomness to select a strongly connected component to separate from a newly added subgraph, then recursively calls his algorithm on each of the induced subgraphs.
+
+In solving Single Source Shortest Paths, Spencer employs a method very similar to pbfs, but adds additional complexity in order to account for the edge weights.
+
 
 %----------------------------------------------------------------------------------------
 %	LITERATURE SURVEY
