--- a/grouppaper.tex
+++ b/grouppaper.tex
@@ -66,7 +66,7 @@
 \textbf{Abstract}
 
 \begin{abstract}
-Our paper is \textit{Time-Work Tradeoffs for Parallel Algorithms}, \textit{Spencer\cite{S97}}. In this paper, Spencer focuses on several open parallel problems that are affected by the transitive closure bottleneck. For each of the below problems, Spencer describes an algorithm that comes closer to work efficiency than existing approaches that utilize transitive closure. However, this increased work efficiency comes at the cost of an asymptotic increase in the span of each algorithm relative to the time optimal solution. 
+Our paper is \textit{Time-Work Tradeoffs for Parallel Algorithms}, \textit{Spencer\cite{S97}}. In this paper, Spencer focuses on several open parallel problems that are affected by the transitive closure bottleneck. For each of the below problems, Spencer describes an algorithm that comes closer to work efficiency than existing approaches that utilize transitive closure. However, this increased work efficiency comes at the cost of an asymptotic increase in the span of each algorithm relative to the time optimal solution.  
 
 \underline{Problems}
 \begin{itemize}
@@ -86,7 +86,7 @@ Rather than using a matrix based approach, Spencer utilizes a new data structure
 
 \section{Introduction}
 
-\textit{Spencer\cite{S97}} focuses on problems for which we known of no work-time efficient parallel algorithms that provide a solution. That is, there are no known parallel algorithms that are able to solve any of the following probelems within a logarithmic factor of the fastest sequential algorithm's work, where work is the product of the running time and the processor count. For the following problems, which were presented in \textit{Karp-Ramachandran\cite{KR90}}, \textit{Spencer\cite{S97}} develops parallel algorithms with a better work efficiency than transitive closure based methods:
+\textit{Spencer\cite{S97}} focuses on problems for which we known of no work-time efficient parallel algorithms that provide a solution. That is, there are no known parallel algorithms that are able to solve any of the following probelems within a logarithmic factor of the fastest sequential algorithm's work, where work is the product of the running time and the processor count. For the following problems, which were presented in \textit{Karp-Ramachandran\cite{KR90}}, \textit{Spencer\cite{S97}} develops parallel algorithms with a better work efficiency than transitive closure based methods: 
 
 \begin{itemize}
 \item Directed Spanning Tree
@@ -97,7 +97,7 @@ Rather than using a matrix based approach, Spencer utilizes a new data structure
 \item Single Source Shortest Paths with Non-Negative Edges
 \end{itemize}
 
-Spencer's motivation for prioritizing work efficiency over time efficiency stems from the fact that existing parallel transitive closure algorithms for these problems perform significantly worse than their sequential counterparts when run on only a single processor. In an effort to reduce this problem, Spencer's algorithms exhibit a time-work trade-off, that is, the longer they are allowed to run, the less overall work they perform. This phenomenon exists due of the fact that certain speculative computations can be eliminated as time progresses, thus reducing overall work. The first full algorithm which Spencer presents solves topological sort, while the second algorithm solves breadth first search. It was mentioned in passing that the breadth first search algorithm can solve directed spanning trees and the topological sort algorithm can solve cycle detection for directed graphs. Furthermore, Spencer expands upon the breadth first search algorithm  by utilizing it to find strongly connected components and extending his breadth first search methods to support non-negative edge weights so as to solve the single source shortest paths problem.\\
+Spencer's motivation for prioritizing work efficiency over time efficiency stems from the fact that existing parallel transitive closure algorithms for these problems perform significantly worse than their sequential counterparts when run on only a single processor. In an effort to reduce this problem, Spencer's algorithms exhibit a time-work trade-off, that is, the longer they are allowed to run, the less overall work they perform. This phenomenon exists due of the fact that certain speculative computations can be eliminated as time progresses, thus reducing overall work. The first full algorithm which Spencer presents solves topological sort, while the second algorithm solves breadth first search. It was mentioned in passing that the breadth first search algorithm can solve directed spanning trees and the topological sort algorithm can solve cycle detection for directed graphs. Furthermore, Spencer expands upon the breadth first search algorithm  by utilizing it to find strongly connected components and extending his breadth first search methods to support non-negative edge weights so as to solve the single source shortest paths problem.\\ 
 
 \textbf{\textit{/* Note: We may or may not need these definitions here. */}}\\
 We next reproduce three definitions given in \textit{Spencer\cite{S97}}:\\
@@ -135,10 +135,9 @@ In solving topological sort, \textit{Spencer\cite{S97}} actually solves the reve
 
 In solving breadth first search, \textit{Spencer\cite{S97}} employs a very similar algorithm to \textit{Rotpo} called \textit{pbfs}. Again, there exists a parallel algorithm that can solve breadth first search in $O(\log^2{n})$ time and $O(n^3\log{n})$ work by calculating the transitive closure $G^*$. \textit{pbfs} reduced the work by deleting vertices from $G_u$, the unknown graph consisting of unknown vertices, once it has been known. All the techniques developed for \textit{Rtopo} are applicable to \textit{bpfs}. 
 
-In solving strongly connected components, Spencer again utilizes pbfs. The algorithm utilizes divide and conquer in order to separate subsets of strongly connected components and subgraphs of nodes which have not yet been placed in a strongly connected component. He first applies a procedure called "split" which utilizes uniform randomness to select a strongly connected component to separate from a newly added subgraph, then recursively calls his algorithm on each of the induced subgraphs.
+In solving strongly connected components, Spencer again utilizes pbfs. The algorithm utilizes divide and conquer in order to separate subsets of strongly connected components and subgraphs of nodes which have not yet been placed in a strongly connected component. He first applies a procedure called "split" which utilizes uniform randomness to select a strongly connected component to separate from a newly added subgraph, then recursively calls his algorithm on each of the induced subgraphs. 
 
-In solving Single Source Shortest Paths, Spencer employs a method very similar to pbfs, but adds additional complexity in order to account for the edge weights.
-
+In solving Single Source Shortest Paths, Spencer employs a method very similar to pbfs, but adds additional complexity in order to account for the edge weights. 
 
 %----------------------------------------------------------------------------------------
 %	LITERATURE SURVEY
@@ -146,13 +145,13 @@ In solving Single Source Shortest Paths, Spencer employs a method very similar t
 
 \section{Significant Related Results}
 
-The three most centrally related papers to Spencer we chose are: Karp-Ramachandran, Ullman-Yannakakis, and Paul.
+The three most centrally related papers to \textit{Spencer\cite{S97}} are:  \textit{Karp-Ramachandran\cite{KR90}}, \textit{Ullman-Yannakakis\cite{UY91}}, and \textit{Paul\cite{P83}}.
 
-Karp-Ramachandran is a survey of the accumlated theory of parallel algorithms up to the 1990s. This survey focused on the PRAM as its main computational model and starts off with an overview of efficient parallel algorithms on arrays, algebraic expressions, graphs, sorting, etc... After estabishing the fundamentals, the survey explores the different vairants PRAM models handle concurrent reads and write, in addition provided a brief introduction to other parallel models different from the PRAM. Finally, the survey discussed the class of problem known as NC, problems that have parallel solutions in polylog time and perform polynomial work.  It is actually here in which Spencer makes use of Karp-Ramachandran, where the survey listed the aformentioned six graph problems that have no known efficient solution due to the Transitive Closure Bottleneck. We believe that without Karp-Ramachandran, there would be no Spencer, since his entire paper is stemmed from this part of the survey. There is also the fact that Spencer's Rtopo's algorithm depends on an efficient simulation of CREW on EREW to maintain the necessary data structures for its nearby lists.
+\textit{Karp-Ramachandran\cite{KR90}} is a survey of the accumulated theory of parallel algorithms up to the 1990s. This survey focused on the PRAM as its main computational model and starts off with an overview of efficient parallel algorithms. After establishing the fundamentals, the survey explores how the different variants PRAM models handle concurrent reads and write, in addition provided a brief introduction to other parallel models different from the PRAM. Finally, the survey discussed the class of problem known as NC, problems that have parallel solutions in polylog time and perform polynomial work.  It is actually here in which \textit{Spencer\cite{S97}} makes use of \textit{Karp-Ramachandran\cite{KR90}}, where the survey listed the aforementioned six graph problems that have no known efficient solution due to the Transitive Closure Bottleneck. We believe that without \textit{Karp-Ramachandran\cite{KR90}}, there would be no \textit{Spencer\cite{S97}}, since his entire paper is stemmed from this part of the survey. There is also the fact that \textit{Spencer\cite{S97}'s Rtopo} algorithm depends on an efficient simulation of CREW on EREW to maintain the necessary data structures for its nearby lists.\\
 
-Ullman-Yannakakis introduces a high-probablilty parallel algorithm that finds the transitive closure from a single source in $~O(n^(e'))$ time with $~O(mn^(1-2e'))$ processors such that $e >= n^(2-3e')$. Their algorithm also finds the transitive closure for all pairs in $~O(n^(e'))$ time with $~O(mn^(1-e'))$ processors such that $m >= n^(2-2e')$. They require $0 <= e' <= 1/2$. The probability that their algorithm fails to find a path is at most $2^(-ac)$, where a is a positive constant and c is some time multiplier. Their algorithm is the first in which time is sublinear and work is less than $M(n)$. Our main interest in Ullman-Yannakakis is the fact that they have already established an algorithm exhibiting the time-work tradeoff that solves breadth first search. Their algorithm is high-probability, and we were interested in seeing a different approach to the same problem we are facing in Spencer. In addition, their was extended into the context of single source shortest paths and strongly connected components, highlighting the fact that the true novelty in Spencer is it's introduction of nearby lists.
+\textit{Ullman-Yannakakis\cite{UY91}} introduces a high-probability parallel algorithm that finds the transitive closure from a single source in $\tilde{O}(n^\epsilon)$ time with $\tilde{O}(mn^{1-2\epsilon})$ processors such that $m \geq n^{2-3\epsilon}$. Their algorithm also finds the transitive closure for all pairs in $\tilde{O}(n^\epsilon)$ time with $\tilde{O}(mn^{1-\epsilon})$ processors such that $m \geq n^{2-2\epsilon}$. Both require $0 \leq \epsilon \leq \frac{1}{2}$. The probability that their algorithm fails to find a path is at most $2^{-c\alpha}$, where $\alpha$ is a positive constant and $c$ is some time multiplier. Their algorithm is the first in which time is sub-linear and work is less than $M(n)$. Our main interest in \textit{Ullman-Yannakakis\cite{UY91}} is the fact that they have already established an algorithm exhibiting the time-work trade off that solves breadth first search. Their algorithm is high-probability, and we were interested in seeing a different approach to the same problem we are facing in \textit{Spencer\cite{S97}}. In addition, their was extended into the context of single source shortest paths and strongly connected components, highlighting the fact that the true novelty in \textit{Spencer\cite{S97}} is it's introduction of nearby lists.
 
-Paul introduces parallel techniques than search, insert, and delete from 2-3 treens in O(logn + logk) time on the EREW, where n is the number of leaves and k is the number of searches, inserts or deletes we want to perform in parallel. He seemed to be the first to design a fast tree algorithm. This results presented by Paul were used by Spencer at several key areas in his algorithms. In particular, Rtopo needed a variation of the search algorithm to find all the totally terminal vertices to be deleted and SSSP required a parallel extention of 2-3 trees to search, insert, and delete many items in parallel. We decided to unpeel some of the details presented in Paul that Spencer decided to abtract away from his paper so that we may have a better understanding of his algorithms.
+\textit{Paul\cite{P83}} introduces parallel techniques that search, insert, and delete from 2-3 trees in $O(\log{n} + \log{k})$ time on the EREW, where $n$ is the number of leaves and $k$ is the number of searches, inserts or deletes we want to perform in parallel. He seemed to be the first to design a fast tree algorithm. This results presented by \textit{Paul\cite{P83}} were used by \textit{Spencer\cite{S97}} at several key areas in his algorithms. In particular, \textit{Rtopo} needed a variation of the search algorithm to find all the totally terminal vertices to be deleted and \textit{SSSP} required a parallel extension of 2-3 trees to search, insert, and delete many items in parallel. We decided to unravel some of the details presented in Paul that Spencer decided to abstract away from his paper so that we may have a better understanding of his algorithms.
 
 
 %----------------------------------------------------------------------------------------
@@ -179,6 +178,6 @@ Give an overview of the current open problems and future research directions rel
 %----------------------------------------------------------------------------------------
 
 \bibliographystyle{abbrv}
-\bibliography{spencer,karp_ramachandran}
+\bibliography{spencer,karp_ramachandran,ullman-yannakakis,paul}
 
 \end{document}
