--- a/grouppaper.tex
+++ b/grouppaper.tex
@@ -147,7 +147,7 @@ In solving Single Source Shortest Paths, Spencer employs a method very similar t
 
 The three most centrally related papers to \textit{Spencer\cite{S97}} are:  \textit{Karp-Ramachandran\cite{KR90}}, \textit{Ullman-Yannakakis\cite{UY91}}, and \textit{Paul\cite{P83}}.
 
-\textit{Karp-Ramachandran\cite{KR90}} is a survey of the accumulated theory of parallel algorithms up to the 1990s. This survey focused on the PRAM as its main computational model and starts off with an overview of efficient parallel algorithms. After establishing the fundamentals, the survey explores how the different variants PRAM models handle concurrent reads and write, in addition provided a brief introduction to other parallel models different from the PRAM. Finally, the survey discussed the class of problem known as NC, problems that have parallel solutions in polylog time and perform polynomial work.  It is actually here in which \textit{Spencer\cite{S97}} makes use of \textit{Karp-Ramachandran\cite{KR90}}, where the survey listed the aforementioned six graph problems that have no known efficient solution due to the Transitive Closure Bottleneck. We believe that without \textit{Karp-Ramachandran\cite{KR90}}, there would be no \textit{Spencer\cite{S97}}, since his entire paper is stemmed from this part of the survey. There is also the fact that \textit{Spencer\cite{S97}'s Rtopo} algorithm depends on an efficient simulation of CREW on EREW to maintain the necessary data structures for its nearby lists.\\
+\textit{Karp-Ramachandran\cite{KR90}} is a survey of the accumulated theory of parallel algorithms up to the 1990s. This survey focused on the PRAM as its main computational model and starts off with an overview of efficient parallel algorithms. After establishing the fundamentals, the survey explores how the different variants PRAM models handle concurrent reads and write, in addition provided a brief introduction to other parallel models different from the PRAM. Finally, the survey discussed the class of problem known as NC, problems that have parallel solutions in polylog time and perform polynomial work.  It is actually here in which \textit{Spencer\cite{S97}} makes use of \textit{Karp-Ramachandran\cite{KR90}}, where the survey listed the aforementioned six graph problems that have no known efficient solution due to the Transitive Closure Bottleneck. We believe that without \textit{Karp-Ramachandran\cite{KR90}}, there would be no \textit{Spencer\cite{S97}}, since his entire paper is stemmed from this part of the survey. There is also the fact that \textit{Spencer\cite{S97}'s Rtopo} algorithm depends on an efficient simulation of CREW on EREW to maintain the necessary data structures for its nearby lists.
 
 \textit{Ullman-Yannakakis\cite{UY91}} introduces a high-probability parallel algorithm that finds the transitive closure from a single source in $\tilde{O}(n^\epsilon)$ time with $\tilde{O}(mn^{1-2\epsilon})$ processors such that $m \geq n^{2-3\epsilon}$. Their algorithm also finds the transitive closure for all pairs in $\tilde{O}(n^\epsilon)$ time with $\tilde{O}(mn^{1-\epsilon})$ processors such that $m \geq n^{2-2\epsilon}$. Both require $0 \leq \epsilon \leq \frac{1}{2}$. The probability that their algorithm fails to find a path is at most $2^{-c\alpha}$, where $\alpha$ is a positive constant and $c$ is some time multiplier. Their algorithm is the first in which time is sub-linear and work is less than $M(n)$. Our main interest in \textit{Ullman-Yannakakis\cite{UY91}} is the fact that they have already established an algorithm exhibiting the time-work trade off that solves breadth first search. Their algorithm is high-probability, and we were interested in seeing a different approach to the same problem we are facing in \textit{Spencer\cite{S97}}. In addition, their was extended into the context of single source shortest paths and strongly connected components, highlighting the fact that the true novelty in \textit{Spencer\cite{S97}} is it's introduction of nearby lists.
 
