Added Future Research

--- a/grouppaper.tex
+++ b/grouppaper.tex
@@ -188,7 +188,8 @@ If time permits, Walter Xia will also present \textit{pbfs} from \textit{Spencer
 %----------------------------------------------------------------------------------------
 
 \section{Further Research Directions}
-Give an overview of the current open problems and future research directions related to the work in the assigned paper.
+\textbf{\textit{/* Note: We may want to add to this. */}}\\
+\textit{Spencer\cite{S97}} suggested that it would be nice to have deterministic rather than probabilistic parallel algorithms that can solve strongly connected components and single source shortest paths. \textit{Karp-Ramachandran\cite{KR90}} gave a list of open problems that we currently do not know how to solve in parallel which included directed and  undirected depth first search. We believe the real interesting question is whether we can forego transitive closure as a subroutine when dealing with problems involving graphs.
 
 
 
